--- a/Aufgabe_2/index.html
+++ b/Aufgabe_2/index.html
@@ -2,7 +2,9 @@
 <head>
 <script type="text/javascript" src=„http://code.jquery.com/jquery-1.11.0.min.js“>
  	$('#submit').click(function(){
- 		
+
+ 		var data = 
+
   		$.ajax({
 			type: 'POST',
 			url: '/planeten',
