--- a/Prototyp/public/index.html
+++ b/Prototyp/public/index.html
@@ -76,7 +76,12 @@
     </head>
     <body>        
         <nav id="Module">
-            <div>WBA 2 - DB 1 - CGA</div>
+            WBA 2 - DB 1 - CGA 
+            <form id="abo" name="abo" action="">
+                Abonnieren um Nichts zu verpassen?
+                <input type="checkbox" value="abonnieren"></input>
+            </form>
+            
         </nav>
         
         <aside>
