abfuck mit der express-version^^

--- a/LernPlatform/public/index.html
+++ b/LernPlatform/public/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Material 1</title>
+		<!--CSS-->
+        <link href="style.css" type="text/css" rel="stylesheet">
+        <!--JQuery-->
 		<script src='http://code.jquery.com/jquery-1.11.0.min.js'></script>
 
 		<script>
